# brainfuck

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  code.c  code.h  error.c  error.h  eval.c  eval.h  getopt.c  getopt.h  hgbf.c  opcode.h  stream.c  stream.h
test/: adding.bf  hello.bf  rot13.bf
